0.04
 - Add <?xml> header to XML document.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Task::Map::Tube to SEE ALSO section in doc.
 - Update copyright years to 2015.

0.03 2014-12-23T14:20:09+01:00
 - Add Map::Tube::GraphViz, Map::Tube::Text::Table, Map::Tube::Bucharest,
   Map::Tube::Dnipropetrovsk, Map::Tube::Kazan, Map::Tube::Novosibirsk,
   Map::Tube::Prague, Map::Tube::SaintPetersburg, Map::Tube::Samara,
   Map::Tube::Tbilisi, Map::Tube::Vienna and Map::Tube::Yekaterinburg to
   SEE ALSO section in doc.
 - Add EXAMPLE3 section to doc.
 - Add get_lines() method to doc.
 - Add get_stations() method to doc.
 - Remove executable bit from kharkiv-map.xml file.

0.02 2014-12-11T09:30:17+01:00
 - Fix kharkiv-map.xml file.

0.01 2014-12-10T01:16:56+01:00
 - First version