@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <tube name="Харківський метрополітен">
   <!-- https://uk.wikipedia.org/wiki/Харківський_метрополітен -->
+  <lines>
+    <line id="1" name="Холодногірсько-Заводська лінія" color="red"/>
+    <line id="2" name="Салтівська лінія" color="blue"/>
+    <line id="3" name="Олексіївська лінія" color="green"/>
+  </lines>
   <stations>
 
     <!-- https://uk.wikipedia.org/wiki/Холодногірсько-Заводська_лінія -->
