@@ -1,5 +1,6 @@
 0.04
  - Add <?xml> header to XML document.
+ - Add lines to XML document.
  - Add Map::Tube::Graph to SEE ALSO section in doc.
  - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
  - Add Task::Map::Tube to SEE ALSO section in doc.
